--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TO-DO LIST</title>
     <link rel="stylesheet" href="css/lista.css">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon/favicon.ico">
     <script src="js/main.js"></script>
 </head>
 <body>
