adicionando funcoes editar/deletar

--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
                 <input type="checkbox" name="statusTarefa" id="statusTarefa">
                 <p>Aprender JS</p>
                 <div class="botoes">
-                    <img class="icon" src="assets/icon/edit.png" alt="edit">
-                    <img class="icon" src="assets/icon/delete.png" alt="delete">
+                    <img class="icon" src="assets/icon/edit.png" alt="edit" onclick="editarTarefa()">
+                    <img class="icon" src="assets/icon/delete.png" alt="delete" onclick="deletarTarefa()">
                 </div>
             </div>
             <div class="tarefa">
                 <input type="checkbox" name="statusTarefa" id="statusTarefa">
                 <p>Formatar o PC</p>
                 <div class="botoes">
-                    <img class="icon" src="assets/icon/edit.png" alt="edit">
-                    <img class="icon" src="assets/icon/delete.png" alt="delete">
+                    <img class="icon" src="assets/icon/edit.png" alt="edit" onclick="editarTarefa()">
+                    <img class="icon" src="assets/icon/delete.png" alt="delete" onclick="deletarTarefa()">
                 </div>
             </div>
             <div class="tarefa">
                 <input type="checkbox" name="statusTarefa" id="statusTarefa">
                 <p>Rir do Curintia</p>
                 <div class="botoes">
-                    <img class="icon" src="assets/icon/edit.png" alt="edit">
-                    <img class="icon" src="assets/icon/delete.png" alt="delete">
+                    <img class="icon" src="assets/icon/edit.png" alt="edit" onclick="editarTarefa()">
+                    <img class="icon" src="assets/icon/delete.png" alt="delete" onclick="deletarTarefa()">
                 </div>
             </div>
         </div>
